# filegrids

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.rst  cli.rst  conf.py  index.rst  quickstart.rst
src/filegrids/: __init__.py  cli.py  core.py
tests/: conftest.py  test_cli_minimal.py  test_filegridbuilder_minimal.py
